2004-10-05  Stephane Loeuillet  <stephane.loeuillet@tiscali.fr>

	* gst/typefind/gsttypefindfunctions.c: (plugin_init):
	Add rmvb to the list of known RealMedia extensions

2004-10-05  Wim Taymans  <wim@fluendo.com>

	* ext/libmng/gstmngdec.c: (gst_mngdec_loop), (mngdec_error),
	(mngdec_openstream), (mngdec_closestream),
	(mngdec_handle_sink_event), (mngdec_readdata),
	(mngdec_gettickcount), (mngdec_settimer), (mngdec_processheader),
	(mngdec_getcanvasline), (mngdec_refresh),
	(gst_mngdec_change_state):
	Set the framerate correctly.

2004-10-04  Ronald S. Bultje  <rbultje@ronald.bitfreak.net>

	* gst/avi/gstavidemux.c: (gst_avi_demux_massage_index):
	  There was something wrong with the index massaging.

2004-10-04  Wim Taymans  <wim@fluendo.com>

	* ext/jpeg/gstjpeg.c: (smoke_type_find), (plugin_init):
	* ext/jpeg/gstsmokedec.c: (gst_smokedec_init),
	(gst_smokedec_chain):
	* ext/jpeg/gstsmokedec.h:
	* ext/jpeg/gstsmokeenc.c: (gst_smokeenc_class_init),
	(gst_smokeenc_init), (gst_smokeenc_resync), (gst_smokeenc_chain):
	* ext/jpeg/gstsmokeenc.h:
	* ext/jpeg/smokecodec.c: (smokecodec_encode_new),
	(smokecodec_decode_new), (smokecodec_info_free),
	(smokecodec_set_quality), (smokecodec_get_quality),
	(smokecodec_set_threshold), (smokecodec_get_threshold),
	(smokecodec_set_bitrate), (smokecodec_get_bitrate),
	(find_best_size), (abs_diff), (put), (smokecodec_encode_id),
	(smokecodec_encode), (smokecodec_parse_id),
	(smokecodec_parse_header), (smokecodec_decode):
	* ext/jpeg/smokecodec.h:
	* ext/jpeg/smokeformat.h:
	Updated smoke, new bitstream, allows embedding in ogg.

2004-10-04  Ronald S. Bultje  <rbultje@ronald.bitfreak.net>

	* gst/avi/gstavidemux.c: (gst_avi_demux_handle_src_event):
	  Fix seeking in some files. All this code is no longer needed (and
	  actually breaks stuff) because we now synchronize the full index
	  right when reading the header.

2004-10-04  Wim Taymans  <wim@fluendo.com>

	* configure.ac:
	configure update for libmng.
