@@ -1,3 +1,8 @@
+2004-10-05  Ronald S. Bultje  <rbultje@ronald.bitfreak.net>
+
+	* gst/avi/gstavidemux.c: (gst_avi_demux_massage_index):
+	  Prevent overwrite of size member. Makes audio sound crappy.
+
 2004-10-05  Stephane Loeuillet  <stephane.loeuillet@tiscali.fr>
 
 	* gst/typefind/gsttypefindfunctions.c: (plugin_init):
